2001-08-31 11:32 GMT+1 Antonio Linares <alinares@fivetech.com>
   + harbour/source/vm/mainlgtk.c
     Added Marek Paliwoda's Linux GTK application entry point

2001-08-28 21:10 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   * added #include "dir.h" inside platform tags

2001-08-30 16:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * config/os2/gcc.cf
  * config/os2/icc.cf
    + Automatically deal with different linker requirements for
      Presentation Manager programs and VIO programs.

  * contrib/hgf/os2/os2pm.c
    ! Removed hWndFrame variable from HB_FUNC( WINCREATESTDWINDOW ),
      because it isn't needed and causes problems in C++ mode.

  * doc/gmake.txt
    + Added mention of w32/bcc32.
    + Added mention of os2/gcc and os2/icc with the new os2pm.

  * source/vm/Makefile
    ! Always build both main and mainpm for OS/2 builds, because
      the choice of which to use is a program link-time choice,
      not a Harbour build-time choice.

2001-08-30 19:00 GMT+1 Ignacio Ortiz <ignacio@fivetech.com>
   * source/rtl/memoline.c
   * source/rtl/mlcount.c
   * source/rtl/tget.prg
   * source/rtl/transfrm.c
     * Return to previous revision due a mistake in last CVS process

2001-08-30 15:38 GMT Dave Pearson <davep@davep.org>
   * source/rtl/Makefile
     * Added mlctopos.c and mpostolc.c to C_SOURCES.

2001-08-30 15:03 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * contrib/hgf/os2pm/*
     * changed to add client window repainting capabilities.

2001-08-30 13:15 GMT+1 Ignacio Ortiz <ignacio@fivetech.com>
   + source/rtl/mlctopos.c
   + source/rtl/mpostolc.c
     * The last two memo Standard Clipper functions missing
   * makefile.bc
     * To include the two files. Please someone check other make files
   * source/rtl/dummy.prg
     * removed mlctopos and mpostolc dummy functions
   * doc/funclist.txt
     * change state to ready for mpostolc and mlctopos

2001-08-30 09:31 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * contrib/hgf/os2pm/Makefile