@@ -1,18 +1,16 @@
 Procedure Main()
 
-   LOCAL   GetList := {}, cVar := "Hello", nVal := 100
+   LOCAL   GetList := {}, cVar := "Hello"
    MEMVAR  aVar, nIndex, cMacro
    PRIVATE aVar := { "World", "Again" }, nIndex := 1, cMacro := "cEarly", cEarly := {"Early"}, cLate := "Late!", cEarly2 := {"Early2"}
 
    CLS
 
-   ? "Aqui falla: " + Transform("100", "@Z")
    ? "2nd GET should say 'Early'."
 
    @ 10,10 SAY "cVar            :" GET cVar PICTURE "@K!"
-   @ 12,10 SAY "Prueba          :" GET nVal PICTURE "@z 999"
-   //@ 12,10 SAY "cMacro[1]       :" GET &cMacro[1]
-   //@ 14,10 SAY "cMacro.2[1]     :" GET &cMacro.2[1]
+   @ 12,10 SAY "cMacro[1]       :" GET &cMacro[1]
+   @ 14,10 SAY "cMacro.2[1]     :" GET &cMacro.2[1]
    @ 16,10 SAY "cEarly[1]       :" GET cEarly[1]
    //@ 14,10 SAY "cMacro          :" GET &(cMacro)[1]
    nIndex := 2
@@ -33,3 +31,4 @@ Procedure Main()
    */
 
 RETURN
+
